fix stream collect.